<resources>
    <string name="app_name">WotaKuy</string>
    <string name="ss_name">Wota Kuy 48</string>
    <string name="fullname_mjkt48">Nama Lengkap</string>
    <string name="nickname_mjkt48">Nama Panggilan</string>
    <string name="fullname_developer">Samuel Oliver Limanjaya</string>
    <string name="email_developer">samueloliver760@gmail.com</string>
    <string name="status_mjkt48">Status</string>
    <string name="gen_mjkt48">Gen</string>
    <string name="jumlahshow_mjkt48">Jumlah show</string>
    <string name="jiko_mjkt48">Jiko</string>
    <string name="biodata">Biodata</string>
    <string name="sosmed">Social Media</string>
    <string name="tanggallahir">Tanggal Lahir</string>
    <string name="goldarah">Golongan darah</string>
    <string name="horoskop">Horoskop</string>
    <string name="debutgen">Debut gen</string>
    <string name="promosi">Promosi inti</string>
    <string name="fanbase">Fanbase</string>
    <string name="tofanbase">Kunjungi Fanbase</string>
    <string name="deskripsikabesha">Kabesha adalah foto member / trainee yang masih aktif </string>
    <string name="deskripsi_pp">Profile picture developer app WotaKuy</string>
    <string name="desinstagram">Akun resmi Instragram</string>
    <string name="destwitter">Akun resmi X</string>
    <string name="desshowroom">Akun resmi Showroom</string>
    <string name="destiktok">Akun resmi Tiktok</string>
    <string name="desidnlive">Akun resmi IDN Live</string>
    <string name="profile">Profile</string>
    <string-array name="data_fullname">
        <item>Adzana Shaliha</item>
        <item>Amanda Sukma</item>
        <item>Angelina Christy</item>
        <item>Aurellia</item>
        <item>Azizi Asadel</item>
        <item>Callista Alifia</item>
        <item>Cornelia Vanisa</item>
        <item>Febriola Sinambela</item>
        <item>Feni Fitriyanti</item>
        <item>Fiony Alveria</item>
        <item>Flora Shafiq</item>
        <item>Freya Jayawardana</item>
        <item>Gabriela Abigail</item>
        <item>Gita Sekar Andarini</item>
        <item>Helisma Putri</item>
        <item>Indah Cahya</item>
        <item>Indira Seruni</item>
        <item>Jessica Chandra</item>
        <item>Jesselyn Elly</item>
        <item>Kathrina Irene</item>
        <item>Lulu Salsabila</item>
        <item>Marsha Lenathea</item>
        <item>Mutiara Azzahra</item>
        <item>Raisha Syifa</item>
        <item>Reva Fidela</item>
        <item>Shani Indira Natio</item>
        <item>Shania Gracia</item>
        <item>Yessica Tamara</item>
        <item>Abigail Rachel</item>
        <item>Adeline Wijaya</item>
        <item>Aisa Maharani</item>
        <item>Alya Amanda</item>
        <item>Anindya Ramadhani</item>
        <item>Aurhel Alana</item>
        <item>Catherina Vallencia</item>
        <item>Cathleen Nixie</item>
        <item>Celine Thefani</item>
        <item>Chelsea Davina</item>
        <item>Cynthia Yaputera</item>
        <item>Dena Natalia</item>
        <item>Dessy Natalia</item>
        <item>Fritzy Rosmerian</item>
        <item>Gendis Mayrannisa</item>
        <item>Grace Octaviani</item>
        <item>Greesella Adhalia</item>
        <item>Hillary Abigail</item>
        <item>Jazzlyn Trisha</item>
        <item>Jeane Victoria</item>
        <item>Letycia Moreen</item>
        <item>Michelle Alexandra</item>
        <item>Michelle Levia</item>
        <item>Nayla Suji</item>
        <item>Nina Tutachia</item>
        <item>Oline Manuel</item>
        <item>Regina William</item>
        <item>Ribka Budiman</item>
        <item>Shabilqis Naila</item>
        <item>Victoria Kimberly</item>
    </string-array>
    <string-array name="data_nickname">
        <item>\u0028Ashel\u0029</item>
        <item>\u0028Amanda\u0029</item>
        <item>\u0028Christy\u0029</item>
        <item>\u0028Lia\u0029</item>
        <item>\u0028Zee\u0029</item>
        <item>\u0028Callie\u0029</item>
        <item>\u0028Oniel\u0029</item>
        <item>\u0028Olla\u0029</item>
        <item>\u0028Feni\u0029</item>
        <item>\u0028Fiony\u0029</item>
        <item>\u0028Flora\u0029</item>
        <item>\u0028Freya\u0029</item>
        <item>\u0028Ella\u0029</item>
        <item>\u0028Gita\u0029</item>
        <item>\u0028Eli\u0029</item>
        <item>\u0028Indah\u0029</item>
        <item>\u0028Indira\u0029</item>
        <item>\u0028Jessi\u0029</item>
        <item>\u0028Lyn\u0029</item>
        <item>\u0028Kathrina\u0029</item>
        <item>\u0028Lulu\u0029</item>
        <item>\u0028Marsha\u0029</item>
        <item>\u0028Muthe\u0029</item>
        <item>\u0028Raisha\u0029</item>
        <item>\u0028Adel\u0029</item>
        <item>\u0028Shani\u0029</item>
        <item>\u0028Gracia\u0029</item>
        <item>\u0028Chika\u0029</item>
        <item>\u0028Aralie\u0029</item>
        <item>\u0028Delynn\u0029</item>
        <item>\u0028Shasa\u0029</item>
        <item>\u0028Alya\u0029</item>
        <item>\u0028Anin\u0029</item>
        <item>\u0028Lana\u0029</item>
        <item>\u0028Erine\u0029</item>
        <item>\u0028Cathy\u0029</item>
        <item>\u0028Elin\u0029</item>
        <item>\u0028Chelsea\u0029</item>
        <item>\u0028Cynthia\u0029</item>
        <item>\u0028Dena\u0029</item>
        <item>\u0028Dessy\u0029</item>
        <item>\u0028Fritzy\u0029</item>
        <item>\u0028Gendis\u0029</item>
        <item>\u0028Gracie\u0029</item>
        <item>\u0028Greesel\u0029</item>
        <item>\u0028Lily\u0029</item>
        <item>\u0028Trisha\u0029</item>
        <item>\u0028Jeane\u0029</item>
        <item>\u0028Moreen\u0029</item>
        <item>\u0028Michie\u0029</item>
        <item>\u0028Levi\u0029</item>
        <item>\u0028Nayla\u0029</item>
        <item>\u0028Nachia\u0029</item>
        <item>\u0028Oline\u0029</item>
        <item>\u0028Regie\u0029</item>
        <item>\u0028Ribka\u0029</item>
        <item>\u0028Nala\u0029</item>
        <item>\u0028Kimmy\u0029</item>
    </string-array>
    <string-array name="data_nicknameclear">
        <item>Ashel</item>
        <item>Amanda</item>
        <item>Christy</item>
        <item>Lia</item>
        <item>Zee</item>
        <item>Callie</item>
        <item>Oniel</item>
        <item>Olla</item>
        <item>Feni</item>
        <item>Fiony</item>
        <item>Flora</item>
        <item>Freya</item>
        <item>Ella</item>
        <item>Gita</item>
        <item>Eli</item>
        <item>Indah</item>
        <item>Indira</item>
        <item>Jessi</item>
        <item>Lyn</item>
        <item>Kathrina</item>
        <item>Lulu</item>
        <item>Marsha</item>
        <item>Muthe</item>
        <item>Raisha</item>
        <item>Adel</item>
        <item>Shani</item>
        <item>Gracia</item>
        <item>Chika</item>
        <item>Aralie</item>
        <item>Delynn</item>
        <item>Shasa</item>
        <item>Alya</item>
        <item>Anin</item>
        <item>Lana</item>
        <item>Erine</item>
        <item>Cathy</item>
        <item>Elin</item>
        <item>Chelsea</item>
        <item>Cynthia</item>
        <item>Dena</item>
        <item>Dessy</item>
        <item>Fritzy</item>
        <item>Gendis</item>
        <item>Gracie</item>
        <item>Greesel</item>
        <item>Lily</item>
        <item>Trisha</item>
        <item>Jeane</item>
        <item>Moreen</item>
        <item>Michie</item>
        <item>Levi</item>
        <item>Nayla</item>
        <item>Nachia</item>
        <item>Oline</item>
        <item>Regie</item>
        <item>Ribka</item>
        <item>Nala</item>
        <item>Kimmy</item>
    </string-array>
    <string-array name="data_status">
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Member Inti</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
        <item>Trainee</item>
    </string-array>
    <string-array name="data_gen">
        <item>Gen 9</item>
        <item>Gen 10</item>
        <item>Gen 7</item>
        <item>Gen 10</item>
        <item>Gen 7</item>
        <item>Gen 10</item>
        <item>Gen 8</item>
        <item>Gen 7</item>
        <item>Gen 3</item>
        <item>Gen 8</item>
        <item>Gen 8</item>
        <item>Gen 7</item>
        <item>Gen 10</item>
        <item>Gen 6</item>
        <item>Gen 7</item>
        <item>Gen 9</item>
        <item>Gen 10</item>
        <item>Gen 7</item>
        <item>Gen 10</item>
        <item>Gen 9</item>
        <item>Gen 8</item>
        <item>Gen 9</item>
        <item>Gen 7</item>
        <item>Gen 10</item>
        <item>Gen 8</item>
        <item>Gen 3</item>
        <item>Gen 3</item>
        <item>Gen 7</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 12</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 11</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 11</item>
        <item>Gen 12</item>
        <item>Gen 11</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
        <item>Gen 12</item>
    </string-array>
</resources>