<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/kabesha"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/deskripsikabesha"/>

      <TextView
          android:id="@+id/nama_lengkap"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/fullname_mjkt48"
          android:textSize="25sp"
          android:textAlignment="center"
          android:layout_margin="20dp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/kabesha"/>

    <TextView
        android:id="@+id/jiko"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/jiko_mjkt48"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_lengkap"/>


    <TableLayout
        android:id="@+id/detail_member1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jiko"
        app:layout_constraintVertical_bias="0.02">

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="8dp">

        <TextView
            android:id="@+id/gen_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/gen_mjkt48"
            android:textAlignment="center"
            android:textColor="#EF4040"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jlmshow_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textAlignment="center"
            android:text="@string/jumlahshow_mjkt48"
            android:textColor="#EF4040"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_header"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/status_mjkt48"
            android:textColor="#EF4040"
            android:textSize="18sp"
            android:textStyle="bold" />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="8dp">

        <TextView
            android:id="@+id/tgen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/gen_mjkt48"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tjlmshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/jumlahshow_mjkt48"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/status_mjkt48"
            android:textAlignment="center"
            android:textSize="20sp" />
      </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/header_biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/biodata"
        android:textColor="#FBA1B7"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/detail_member1"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/header_namapanggilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#EF4040"
        android:textSize="18sp"
        android:text="@string/nickname_mjkt48"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/header_biodata"/>

    <TextView
        android:id="@+id/tnama_panggilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/nickname_mjkt48"
        app:layout_constraintTop_toBottomOf="@+id/header_namapanggilan"/>

    <TextView
        android:id="@+id/header_tanggallahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#EF4040"
        android:textSize="18sp"
        android:text="@string/tanggallahir"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tnama_panggilan"/>

    <TextView
        android:id="@+id/ttanggallahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/tanggallahir"
        app:layout_constraintTop_toBottomOf="@+id/header_tanggallahir"/>

    <TextView
        android:id="@+id/header_golongandarah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#EF4040"
        android:textSize="18sp"
        android:text="@string/goldarah"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ttanggallahir"/>

    <TextView
        android:id="@+id/tgolongandarah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/goldarah"
        app:layout_constraintTop_toBottomOf="@+id/header_golongandarah"/>

    <TextView
        android:id="@+id/header_horoskop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#EF4040"
        android:textSize="20sp"
        android:text="@string/horoskop"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tgolongandarah"/>

    <TextView
        android:id="@+id/thoroskop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/horoskop"
        app:layout_constraintTop_toBottomOf="@+id/header_horoskop"/>

    <TextView
        android:id="@+id/header_debutgen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#EF4040"
        android:textSize="18sp"
        android:text="@string/debutgen"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/thoroskop"/>

    <TextView
        android:id="@+id/tdebutgen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/debutgen"
        app:layout_constraintTop_toBottomOf="@+id/header_debutgen"/>

    <TextView
        android:id="@+id/header_tomemberaktif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#EF4040"
        android:textSize="18sp"
        android:text="@string/promosi"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tdebutgen"/>

    <TextView
        android:id="@+id/ttomemberaktif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/promosi"
        app:layout_constraintTop_toBottomOf="@+id/header_tomemberaktif"/>

    <TextView
        android:id="@+id/header_sosmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/sosmed"
        android:textColor="#FBA1B7"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ttomemberaktif"/>

    <ImageButton
        android:id="@+id/instagram"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:src="@drawable/instagram"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desinstagram"
        app:layout_constraintTop_toBottomOf="@+id/header_sosmed" />

    <ImageButton
        android:id="@+id/tiktok"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginStart="244dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:src="@drawable/tiktok"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/destiktok"
        app:layout_constraintTop_toBottomOf="@+id/header_sosmed" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginStart="168dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:src="@drawable/twitter"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/destwitter"
        app:layout_constraintTop_toBottomOf="@+id/header_sosmed" />

    <ImageButton
        android:id="@+id/showroom"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:src="@drawable/showroom"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desshowroom"
        app:layout_constraintTop_toBottomOf="@+id/header_sosmed" />

    <ImageButton
        android:id="@+id/idnlive"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginStart="320dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:src="@drawable/idnlive"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desidnlive"
        app:layout_constraintTop_toBottomOf="@+id/header_sosmed" />

    <TextView
        android:id="@+id/header_fanbase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="Fanbase"
        android:textColor="#FBA1B7"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/idnlive"/>

    <TextView
        android:id="@+id/tnamafanbase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:text="@string/fanbase"
        app:layout_constraintTop_toBottomOf="@+id/header_fanbase"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/followfb"
        android:layout_width="500px"
        android:layout_height="150px"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        android:text="@string/tofanbase"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tnamafanbase"
        app:layout_constraintStart_toStartOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>