<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:src="@drawable/pp"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/deskripsi_pp"/>

    <TextView
        android:id="@+id/fn_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname_developer"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp"/>

    <TextView
        android:id="@+id/email_developer"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/email_developer"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fn_developer"/>

</androidx.constraintlayout.widget.ConstraintLayout>