<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    layout_width="wrap_content"
    layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/kabesha_member"
            android:layout_width="87dp"
            android:layout_height="102dp"
            android:scaleType="centerCrop"
            card_view:civ_border_color="@color/black"
            card_view:civ_border_width="5px"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/kabesha_member"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/kabesha_member"
            card_view:layout_constraintTop_toTopOf="@+id/kabesha_member"
            tools:text="@string/fullname_mjkt48" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="137dp"
            android:layout_height="27dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/tv_fullname"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/tv_fullname"
            card_view:layout_constraintTop_toTopOf="@+id/kabesha_member"
            tools:text= "@string/nickname_mjkt48"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:textSize="14sp"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="@+id/kabesha_member"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_fullname"
            card_view:layout_constraintStart_toStartOf="@+id/tv_fullname"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_fullname"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/status_mjkt48"/>

        <TextView
            android:id="@+id/tv_gen"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:textSize="14sp"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="@+id/kabesha_member"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_status"
            card_view:layout_constraintStart_toStartOf="@+id/tv_status"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_status"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/gen_mjkt48"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>